--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Fictional Chaaracter</title>
+    <title>My Fictional Character</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <img src="title.png" alt="Bugs bunny title" class="title">
     <img src="https://pbs.twimg.com/media/GCdcCVcaAAAQ_AM.jpg:large" alt="Bug Bunny Standing" class="mainimg">
+    <img src="https://cdnb.artstation.com/p/assets/images/images/037/938/831/large/juniper-david-b8418209-3700-467b-94f7-da09098ff0cd.jpg?1621723307&dl=1" alt="King Bugs" class="wow">
+    <img src="https://www.thesaturdaypaper.com.au/sites/default/files/styles/article_large/public/images/sport_space_jam_copy.jpg?itok=3BJryE4F" alt="Space Jam" class="space">
+    
+    <h1 class="para1"> Bugs Bunny is a Bunny from the famous Looney Tunes. <br>
+         He is known for his comedic appearance on the show <br>
+         which made him well known around the world. Bugs Bunny <br>
+         is also known for his wit and how he outsmarts his enemies <br>
+          to win most of his fights. This fighting style was both <br>
+         hilarious and fun to watch making him one of the mkost favorable <br>
+         character in the show.
+   </h1>
+
+   <h1 class="para2">
+    Bugs Bunny is also known in his apperances in Space Jam where he was <br>
+    shown with both Michael Jordan and Lebron James. His apperance in the <br>
+    movies lightend up the mood through him telling jokes and overall just<br>
+     entertaining the audience.
+   </h1>
+   
 </body>
 
 </html>
